<?xml version="1.0"?>
<package format="3">
  <name>tinyPLC_vehicle_description</name>
  <version>0.0.1</version>
  <description>tinyPLC vehicle description (dimensions/URDF/params)</description>
  <maintainer email="you@example.com">xiaoan</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>
</package>
