<?xml version="1.0"?>
<package format="3">
  <name>tinyPLC_vehicle_launch</name>
  <version>0.0.1</version>
  <description>Bringup for tinyPLC vehicle interface</description>
  <maintainer email="you@example.com">xiaoan</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
</package>
